--- a/src/app/admin/features/inventory/allocated/allocated.component.html
+++ b/src/app/admin/features/inventory/allocated/allocated.component.html
@@ -65,8 +65,8 @@
                     <!-- <div class="tooltip">Pdf</div> -->
                 </div>
             </div>
-            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                style="max-height: 775px;overflow: scroll;" [rowSelection]="rowSelection" [gridOptions]="gridOptions"
+            <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                [rowSelection]="rowSelection" [gridOptions]="gridOptions"
                 [columnDefs]="columnDefs" [rowData]="rowData" (selectionChanged)="onSelectionChanged()"
                 (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
             </ag-grid-angular>
