--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -318,11 +318,11 @@
         <li *ngIf="isSpecial ">
             <a> <i class="bx bx-cog bx-sm icon "></i> Settings <i class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
-                <!-- <li><a (click)="navgetToUrl('/loginsettings')" (click)="setActiveLinkTab($event)"> <i
-                            class='fa fa-fw fa-users  icon'></i> &nbsp; Login Settings</a></li> -->
-
-                <li><a (click)="navgetToUrl('/loginsettings_credential')" (click)="setActiveLinkTab($event)"> <i
+                <li><a (click)="navgetToUrl('/loginsettings')" (click)="setActiveLinkTab($event)"> <i
                             class='fa fa-fw fa-users  icon'></i> &nbsp; Login Settings</a></li>
+
+                <!-- <li><a (click)="navgetToUrl('/loginsettings_credential')" (click)="setActiveLinkTab($event)"> <i
+                            class='fa fa-fw fa-users  icon'></i> &nbsp; Login Settings</a></li> -->
             </ul>
         </li>
         <li class="mb-3" *ngIf="isSpecial ">
