--- a/src/app/admin/features/operator/operator-details/operator-details.component.scss
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.scss
@@ -333,3 +333,22 @@ span {
 ::ng-deep .mat-mdc-text-field-wrapper {
     height: 50px;
 }
+
+// ================================Select 2===============================
+
+
+::ng-deep .select2-container {
+  width: 300px !important;
+}
+::ng-deep .select2-container .select2-selection--single {
+  height: 45px !important;
+  margin-top: 1%;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+  margin-top: 7px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+  top: 10px;
+}
