--- a/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
@@ -52,6 +52,9 @@
                         <span>CUSTOMER AMOUNT</span>
                     </div>
                     <div class="col-6">
+                        <!-- <input type="text" [(ngModel)]="new_customeramount" placeholder="Enter customer amount"
+                          (keypress)="onKeydown($event)">
+                        <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div> -->
                         <input type="text" [(ngModel)]="new_customeramount" placeholder="Enter customer amount"
                             (input)="clearErrorMessage()" (keypress)="onKeydown($event)">
                         <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
@@ -141,7 +144,6 @@
             <span class="base-package">BASE PACKAGE</span>
             <span class="prime-package">{{package_name}}</span>
         </div>
-
         <!-- Discount Table -->
         <div class="table-responsive">
             <table class="table text-center">
@@ -149,32 +151,49 @@
                     <tr>
                         <th>PLAN</th>
                         <th>CUS_AMT</th>
+                        <th>MSO_AMT</th>
+                        <th>LCO_COM</th>
                         <th>CUR_AMT</th>
                         <th>DIS</th>
-                        <th>LCO_COM</th>
                     </tr>
                 </thead>
-                <thead *ngIf="role !== 'ROLE_OPERATOR'">
+                <thead *ngIf="role != 'ROLE_OPERATOR'">
                     <tr>
-                        <th>PLAN</th>
+                        <!-- <th>PLAN</th>
                         <th>CUS_AMT</th>
                         <th>CUR_AMT</th>
                         <th>DIS</th>
-                        <th>MSO_COM</th>
+                        <th>MSO_COM</th> -->
+
+                        <th>PLAN</th>
+                        <th>CUS_AMT</th>
+                        <th>MSO_AMT</th>
+                        <th>LCO_COM</th>
+                        <th>CUR_AMT</th>
+                        <th>DIS</th>
                     </tr>
                 </thead>
+
                 <tbody *ngFor="let plan of discountPlans">
                     <tr>
                         <td class="plan-name">{{ plan.name }}</td>
                         <td class="customer-amt">{{ plan.customerAmount }}</td>
-                        <td class="current-amt">{{ plan.currentAmount }}</td>
-                        <td>
+                        <!-- <td class="mso-amt">{{ plan.mso_amount }}</td> -->
+                        <td class="mso-amt">{{ plan.msoamount }}</td>
+                        <td class="lco-commission">{{ plan.lcoCommission }}</td>
+                        <!-- <td>
                             <input type="text" class="discount-input" [(ngModel)]="plan.discount"
                                 (click)="updatePlanDiscount(plan)" (keypress)="onKeydown($event)">
-                            <!-- (keypress)="onKeydown($event)" -->
+                            <div *ngIf="errorMessage" class="text-danger">{{plan.errorMessage }}</div>
+                        </td> -->
+                        <td>
+                            <input type="text" class="current-input" [(ngModel)]="plan.currentAmount"
+                                (click)="updatePlanDiscount(plan)" (keypress)="onKeydown($event)">
                             <div *ngIf="errorMessage" class="text-danger">{{plan.errorMessage }}</div>
                         </td>
-                        <td class="lco-commission">{{ plan.lcoCommission }}</td>
+
+                        <!-- <td class="current-amt">{{ plan.currentAmount }}</td> -->
+                        <td class="discount-amt">{{ plan.discount }}</td>
                     </tr>
                 </tbody>
             </table>
