--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -86,7 +86,6 @@
                             </div>
                         </div>
                         <div class="d-flex">
-
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
                                 Street Name </div>
                             <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
@@ -96,7 +95,6 @@
                             </div>
                         </div>
                         <div class="d-flex">
-
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
                                 LCO Name </div>
                             <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
@@ -106,7 +104,18 @@
                                 {{subdetailsList?.operatorname}} {{subdetails?.operatorname}} -[
                                 {{subdetailsList?.operatorid}}{{subdetails?.operatorid}} ]
                             </div>
-
+                        </div>
+                        <div *ngIf="role == 'ROLE_SUBLCO'" class="d-flex">
+                            <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
+                               SUB LCO  </div>
+                            <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
+                                : </div>
+                            <div class="col-6 col-md-6 d-flex justify-content-start align-items-center"
+                                style="color: rgb(218, 1, 218);">
+                                <!-- {{subdetailsList?.operatorname}} {{subdetails?.operatorname}} -[
+                                {{subdetailsList?.operatorid}}{{subdetails?.operatorid}} ] -->
+                                {{retailername}}
+                            </div>
                         </div>
                         <div *ngIf="role != 'ROLE_SUBSCRIBER'  && role != 'ROLE_SUBLCO'" class="d-flex">
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
@@ -119,9 +128,20 @@
                                 {{subdetailsList?.opbalance}} {{subdetails?.opbalance}}
                             </div>
                         </div>
-                        <div *ngIf="role == 'ROLE_SUBSCRIBER' || role == 'ROLE_SUBLCO' && wallet" class="d-flex">
+                        <div *ngIf="role == 'ROLE_SUBSCRIBER'  && wallet" class="d-flex">
                             <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
                                 Subscriber Balance</div>
+                            <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
+                                : </div>
+                            <div class="col-6 col-md-6 d-flex justify-content-start align-items-center"
+                                style="color: green;">
+                                <i class="fa-solid fa-indian-rupee-sign mx-2" style="color: green;"></i>
+                                {{subBalance}} {{sublcoBalance}}
+                            </div>
+                        </div>
+                        <div *ngIf="role == 'ROLE_SUBLCO'  && wallet" class="d-flex">
+                            <div class="col-6 col-md-4 d-flex justify-content-start align-items-center mb-1 text2">
+                                SUB LCO Balance</div>
                             <div class="col-1 col-md-1 d-flex justify-content-center align-items-center mb-1 text2">
                                 : </div>
                             <div class="col-6 col-md-6 d-flex justify-content-start align-items-center"
@@ -654,7 +674,33 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div *ngIf="role !='ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER' "
+                                        <!-- <div *ngIf="role !='ROLE_SUBLCO' && role != 'ROLE_SUBSCRIBER' "
+                                            class="input_box  mb-3">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <div class="col-6 col-md-6">
+                                                    <span class="me-2">MSO Amount</span>
+                                                </div>
+                                                <div class="col-6 col-md-6 value">
+                                                    {{manageData.msoAmount}}
+                                                </div>
+                                            </div>
+                                        </div> -->
+
+
+
+                                        <!-- <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !wallet) ||  (role !='ROLE_SUBLCO')"
+                                            class="input_box  mb-3">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <div class="col-6 col-md-6">
+                                                    <span class="me-2">Customer Amount</span>
+                                                </div>
+                                                <div class="col-6 col-md-6 value">
+                                                    {{manageData.customerPayAmount}}
+                                                </div>
+                                            </div>
+                                        </div> -->
+
+                                        <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount == 1 && wallet) ||  (role !='ROLE_SUBLCO')"
                                             class="input_box  mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="col-6 col-md-6">
@@ -665,6 +711,9 @@
                                                 </div>
                                             </div>
                                         </div>
+
+
+
                                         <div class="input_box  mb-3">
                                             <div class="d-flex align-items-center justify-content-center">
                                                 <div class="col-6 col-md-6">
