--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
@@ -1700,7 +1700,7 @@
 
 
 
-                <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !Subwallet) ||  (role !='ROLE_SUBLCO')"
+                <div 
                     class="input_box  mb-3">
                     <div class="d-flex align-items-center justify-content-center">
                         <div class="col-6 col-md-6">
@@ -1937,7 +1937,7 @@
                     </div>
                 </div> -->
 
-                <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !Subwallet) ||  (role !='ROLE_SUBLCO')"
+                <div 
                     class="input_box  mb-3">
                     <div class="d-flex align-items-center justify-content-center">
                         <div class="col-6 col-md-6">
@@ -2159,6 +2159,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="input_box  mb-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="col-6 col-md-6">
+                            <span class="me-2">Customer Amount</span>
+                        </div>
+                        <div class="col-6 col-md-6 value">
+                            {{customerPayAmount}}
+                        </div>
+                    </div>
+                </div>
                 <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount == 1 && Subwallet) ||  (role !='ROLE_SUBLCO')"
                     class="input_box  mb-3">
                     <div class="d-flex align-items-center justify-content-center">
@@ -2170,17 +2180,7 @@
                         </div>
                     </div>
                 </div>
-                <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !Subwallet) ||  (role !='ROLE_SUBLCO')"
-                    class="input_box  mb-3">
-                    <div class="d-flex align-items-center justify-content-center">
-                        <div class="col-6 col-md-6">
-                            <span class="me-2">Customer Amount</span>
-                        </div>
-                        <div class="col-6 col-md-6 value">
-                            {{customerPayAmount}}
-                        </div>
-                    </div>
-                </div>
+
 
 
                 <div class="mb-3">
@@ -2437,6 +2437,16 @@
                             </div>
                         </div>
                     </div> -->
+                    <div class="input_box  mb-3">
+                        <div class="d-flex align-items-center justify-content-center">
+                            <div class="col-6 col-md-6">
+                                <span class="me-2">Customer Amount</span>
+                            </div>
+                            <div class="col-6 col-md-6 value">
+                                {{addonConfirmationData.customerPayAmount}}
+                            </div>
+                        </div>
+                    </div>
                     <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount == 1 && Subwallet) ||  (role !='ROLE_SUBLCO')"
                         class="input_box  mb-3">
                         <div class="d-flex align-items-center justify-content-center">
@@ -2448,17 +2458,7 @@
                             </div>
                         </div>
                     </div>
-                    <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !Subwallet) ||  (role !='ROLE_SUBLCO')"
-                        class="input_box  mb-3">
-                        <div class="d-flex align-items-center justify-content-center">
-                            <div class="col-6 col-md-6">
-                                <span class="me-2">Customer Amount</span>
-                            </div>
-                            <div class="col-6 col-md-6 value">
-                                {{addonConfirmationData.customerPayAmount}}
-                            </div>
-                        </div>
-                    </div>
+
 
                     <div class="input_box Isactive mb-1">
                         <div class="d-flex align-items-center justify-content-center">
@@ -2646,7 +2646,16 @@
                             </div>
                         </div>
                     </div> -->
-
+                    <div class="input_box  mb-3">
+                        <div class="d-flex align-items-center justify-content-center">
+                            <div class="col-6 col-md-6">
+                                <span class="me-2">Customer Amount</span>
+                            </div>
+                            <div class="col-6 col-md-6 value">
+                                {{alacarteConfirmationData.customerPayAmount}}
+                            </div>
+                        </div>
+                    </div>
 
                     <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount == 1 && Subwallet) ||  (role !='ROLE_SUBLCO')"
                         class="input_box  mb-3">
@@ -2659,17 +2668,7 @@
                             </div>
                         </div>
                     </div>
-                    <div *ngIf="(role =='ROLE_SUBLCO' && sublcoDiscount != 1 && !Subwallet) ||  (role !='ROLE_SUBLCO')"
-                        class="input_box  mb-3">
-                        <div class="d-flex align-items-center justify-content-center">
-                            <div class="col-6 col-md-6">
-                                <span class="me-2">Customer Amount</span>
-                            </div>
-                            <div class="col-6 col-md-6 value">
-                                {{alacarteConfirmationData.customerPayAmount}}
-                            </div>
-                        </div>
-                    </div>
+
 
 
                     <div class="input_box Isactive mb-1">
