--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -162,7 +162,7 @@
         </li>
 
         <!-- ---------------------------------------vc----------------- -->
-        <!-- <li *ngIf="isUser">
+        <li *ngIf="isUser">
             <a> <mat-icon class="icon">control_camera</mat-icon>VC/STB Master <i
                     class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
@@ -171,7 +171,7 @@
                     </a>
                 </li>
             </ul>
-        </li> -->
+        </li>
         <!-- ------------------------------------------------------------- -->
         <li *ngIf="isUser || isReception ">
             <a> <mat-icon class="icon">games</mat-icon> Inventory <i class='bx bx-chevron-right icon-right'></i></a>
