--- a/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
@@ -389,7 +389,7 @@
         <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
                 class="fa-solid fa-reply mx-2"></i>Back</button>
     </div>
-    <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
+    <div style="background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
         <h3>OVER ALL BASE PRODUCT REPORT</h3>
     </div>
     <div class="row " style="padding: 1rem;">
